--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Create .env for CI
+        run: |
+          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
+          echo "DEBUG=${{ secrets.DEBUG || 'False' }}" >> .env
+
       - name: Install dependencies
         run: |
           python -m venv venv
@@ -57,6 +62,6 @@ jobs:
             pip install -U pip
             pip install -r requirements.txt
             python manage.py migrate --noinput || true
-            python manage.py collectstatic --noinput || true
+            python.manage.py collectstatic --noinput || true
             sudo systemctl reload gunicorn
             sudo systemctl status gunicorn --no-pager || true
