--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
         run: |
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
           echo "DEBUG=${{ secrets.DEBUG || 'False' }}" >> .env
+          echo "KAKAO_REST_KEY=${{ secrets.KAKAO_REST_KEY }}" >> .env
+          echo "KAKAO_API_BASE=https://apis-navi.kakaomobility.com" >> .env
+          echo "KAKAO_LOCAL_BASE=https://dapi.kakao.com" >> .env
+          echo "KAKAO_TIMEOUT=8" >> .env
 
       - name: Install dependencies
         run: |
@@ -62,6 +66,6 @@ jobs:
             pip install -U pip
             pip install -r requirements.txt
             python manage.py migrate --noinput || true
-            python.manage.py collectstatic --noinput || true
+            python manage.py collectstatic --noinput || true
             sudo systemctl reload gunicorn
             sudo systemctl status gunicorn --no-pager || true
