deploy.yml 수정 및 재복원

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           python-version: '3.12'
 
+      # .env 파일 다시 추가
       - name: Create .env for CI
         run: |
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
