--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.12'
 
-      # .env 파일 다시 추가
+      # .env 파일 생성 (Kakao + S3 키까지 추가했음)
       - name: Create .env for CI
         run: |
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
@@ -26,6 +26,10 @@ jobs:
           echo "KAKAO_API_BASE=https://apis-navi.kakaomobility.com" >> .env
           echo "KAKAO_LOCAL_BASE=https://dapi.kakao.com" >> .env
           echo "KAKAO_TIMEOUT=8" >> .env
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
+          echo "AWS_STORAGE_BUCKET_NAME=${{ secrets.AWS_STORAGE_BUCKET_NAME }}" >> .env
+          echo "AWS_S3_REGION_NAME=${{ secrets.AWS_S3_REGION_NAME }}" >> .env
 
       - name: Install dependencies
         run: |
