--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.9.1
 boto3==1.40.9
 botocore==1.40.9
+certifi==2025.8.3
+charset-normalizer==3.4.3
 Django==5.2.4
 django-cors-headers==4.7.0
 django-environ==0.12.0
 django-filter==25.1
 django-storages==1.14.6
 djangorestframework==3.16.1
+idna==3.10
 jmespath==1.0.1
 python-dateutil==2.9.0.post0
+requests==2.32.5
 s3transfer==0.13.1
 six==1.17.0
 sqlparse==0.5.3
