--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.12'
 
-      # .env 파일 생성 (Kakao + S3 키까지 추가했음)
+      # .env 파일 생성 (Kakao + S3 키까지 추가했음 +9.22 EMAIL 추가)
       - name: Create .env for CI
         run: |
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
@@ -30,6 +30,8 @@ jobs:
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
           echo "AWS_STORAGE_BUCKET_NAME=${{ secrets.AWS_STORAGE_BUCKET_NAME }}" >> .env
           echo "AWS_S3_REGION_NAME=${{ secrets.AWS_S3_REGION_NAME }}" >> .env
+          echo "EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }}" >> .env
+          echo "EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }}" >> .env
 
       - name: Install dependencies
         run: |
